--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.5",
+    "@astrojs/solid-js": "^4.0.1",
     "astro": "^4.4.4",
+    "solid-js": "^1.8.15",
     "typescript": "^5.3.3"
   }
 }
